src/test/should_panic/array_map_many_duplicates.stderr
error: proc macro panicked
 --> src/test/should_panic/array_map_many_duplicates.rs:2:5
  |
2 |     linear_collections_macros::array_map![(0, "v"), (0, "v"), (1, "v"), (1, "v")];
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Duplicate keys found: ["0", "1"]
