src/test/should_panic/array_map_many_duplicates.rs
pub fn main() {
    linear_collections_macros::array_map![(0, "v"), (0, "v"), (1, "v"), (1, "v")];
}
